[package]
name = "connection"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
confy = "0.5.1"
dns-lookup = "2.0.2"
inquire = "0.6.2"
magic-crypt = "3.1.12"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
socket2 = "0.5.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
