[package]
name = "connection"
version = "1.4.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
confy = "1.0.0"
dns-lookup = "2.0.4"
inquire = "0.7.5"
magic-crypt = "4.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socket2 = "0.5.10"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
