[package]
name = "connection"
version = "1.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
bincode = { version = "2.0.1", features = ["serde"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.39", features = ["derive"] }
confy = "1.0.0"
dns-lookup = "2.0.4"
inquire = "0.7.5"
magic-crypt = "4.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socket2 = "0.5.10"
strum_macros = "0.27.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
